# effective-cpp

./: .gitignore  CMakeLists.txt  README.md
item25/: CMakeLists.txt  NastyWidget.cpp  RandomType.cpp  main.cpp
item27/: CMakeLists.txt  main.cpp
item41/: CMakeLists.txt  NastyWidget.h  RandomType.h  Widget.cpp  Widget.h  main.cpp
item42/: CMakeLists.txt  main.cpp
item43/: CMakeLists.txt  main.cpp
item44/: CMakeLists.txt  main.cpp
item45/: CMakeLists.txt  main.cpp
item46/: CMakeLists.txt  main.cpp
item47/: CMakeLists.txt  main.cpp
item48/: CMakeLists.txt  main.cpp
