cmake_minimum_required(VERSION 3.8)
project(effective_cpp)

set(CMAKE_CXX_STANDARD 98)

add_subdirectory(item25)
add_subdirectory(item27)
add_subdirectory(item41)
add_subdirectory(item42)
add_subdirectory(item43)
add_subdirectory(item44)
add_subdirectory(item45)
add_subdirectory(item46)
add_subdirectory(item47)
add_subdirectory(item48)